# essay-graphics

./: Cargo.toml  README.md
crates/essay-graphics-api/: Cargo.toml
crates/essay-graphics-api/src/: affine2d.rs  affine3d.rs  bounds.rs  canvas.rs  clip.rs  color.rs  coord.rs  event.rs  lib.rs  matrix4.rs  path.rs  path_opt.rs  path_style.rs  point.rs
crates/essay-graphics-api/src/driver/: backend.rs  figure.rs  mod.rs  renderer.rs
crates/essay-graphics-api/src/form/: form.rs  matrix4.rs  mod.rs  shape.rs
crates/essay-graphics-api/src/renderer/: canvas.rs  drawable.rs  event.rs  mod.rs  (+1 more)
crates/essay-graphics-test/: Cargo.toml
crates/essay-graphics-test/src/: lib.rs  renderer.rs
crates/essay-graphics-wgpu/: Cargo.toml
crates/essay-graphics-wgpu/src/: lib.rs
examples/: bezier_test.rs  circle.rs  cube-3d.rs  layout.rs  markers.rs  patch-test.rs  patch.rs  path.rs  plot.rs  png.rs  shape-2d.rs  text.rs  texture.rs  triangles.rs  viewport.rs
src/: lib.rs
src/artist/: artist.rs  bar.rs  collection.rs  color.rs  colorbar.rs  colormap.rs  container.rs  contour.rs  cycle.rs  grid_color.rs  histogram.rs  image.rs  lines.rs  markers.rs  patch.rs  paths.rs  quiver.rs  stem.rs  style.rs  text.rs  tricontour.rs  triplot.rs
src/frame/: axis.rs  data_box.rs  frame.rs  layout.rs  legend.rs  plot_container.rs
src/graph/: figure.rs  mod.rs  style.rs
src/layout/: figure.rs  frame.rs  graph.rs  layout.rs  layout_main_loop.rs  mod.rs  ptr.rs
src/macros/: mod.rs
src/plot/: fill_between.rs  mod.rs  pie.rs  scatter.rs  specgram.rs  text.rs
src/tri/: delaunay.rs
(+21 files in other folders)
