[package]
name = "essay-graphics"
version = "0.1.34-dev"
edition = "2021"
publish=false

[lib]
path = "src/lib.rs"

[dependencies]
env_logger = { version = "0.11" }
log = { version = "0.4.17" }
downcast-rs = { version = "1.2" }
essay-tensor = { path = "../essay-tensor"  }
essay-graphics-api = { path = "crates/essay-graphics-api" }
essay-graphics-wgpu = { path = "crates/essay-graphics-wgpu" }
essay-graphics-test = { path = "crates/essay-graphics-test" }
futures = "0.3"
image = "0.25"

[workspace]
members = [
    "crates/*",
]
